--- a/_data/rockbox.yml
+++ b/_data/rockbox.yml
@@ -1,5 +1,5 @@
-version: 3.15p11
-release_date: 2021-08-31
+version: 3.15p12
+release_date: 2021-09-30
 
 builds:
   - id: ipodmini2g
@@ -105,3 +105,7 @@ builds:
   - id: agptekrocker
     title: AgpTek Rocker
     has_doc: true
+
+  - id: samsungypr0
+    title: Samsung YP-R0
+    has_doc: false
